# server/auth-user-service-services/docs/swagger.yml
@@ -362,6 +362,57 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /private/v1/users/{id}:
+    patch:
+      security:
+        - bearerAuth: []
+      summary: редактирование пользователя (доступно только админам)
+      tags:
+        - Users Private
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            example: c1cfe4b9-f7c2-423c-abfa-6ed1c05a15c5
+          description: идентификатор пользователя
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdatePrivateUserRequest"
+      responses:
+        "200":
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/SuccessResponse'
+                  - type: object
+                    properties:
+                      result:
+                        $ref: "#/components/schemas/UserPrivateWithoutJWT"
+        "400":
+          description: Не получилось обработать данные
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Не авторизован
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Внутренняя проблема сервера
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
   /health/live:
     get:
@@ -494,17 +545,45 @@ components:
           type: string
           description: "имя"
           example: "German"
-          nullable: false
+          nullable: true
         surname:
           type: string
           description: "фамилия"
           example: "Bogatov"
-          nullable: false
+          nullable: true
         email:
           type: string
           description: "электронная почта"
           example: "bogatovgrmn@gmail.com"
-          nullable: false
+          nullable: true
+
+
+    UpdatePrivateUserRequest:
+      type: object
+      description: "модель обновления пользователя"
+      properties:
+        name:
+          type: string
+          description: "имя"
+          example: "German"
+          nullable: true
+        surname:
+          type: string
+          description: "фамилия"
+          example: "Bogatov"
+          nullable: true
+        email:
+          type: string
+          description: "электронная почта"
+          example: "bogatovgrmn@gmail.com"
+          nullable: true
+        role:
+          type: string
+          description: "роль"
+          enum:
+            - developer
+            - admin
+          nullable: true
 
     JWT:
       type: object
@@ -536,6 +615,49 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/UserWithoutJWT"
+
+
+    UserPrivateWithoutJWT:
+      type: object
+      description: "модель пользователя без jwt"
+      properties:
+        id:
+          type: string
+          description: "идентификатор пользователя"
+          example: "c1cfe4b9-f7c2-423c-abfa-6ed1c05a15c5"
+          nullable: false
+        name:
+          type: string
+          description: "имя"
+          example: "German"
+          nullable: false
+        surname:
+          type: string
+          description: "фамилия"
+          example: "Bogatov"
+          nullable: false
+        email:
+          type: string
+          description: "электронная почта"
+          example: "bogatovgrmn@gmail.com"
+          nullable: false
+        role:
+          type: string
+          description: "роль"
+          enum:
+            - developer
+            - admin
+          nullable: false
+        createdDate:
+          type: string
+          description: "дата создания пользователя"
+          example: "2024-05-22T13:03:25Z"
+          nullable: false
+        updatedDate:
+          type: string
+          description: "дата изменения пользователя"
+          example: "2024-05-22T13:03:25Z"
+          nullable: true
 
 
     UserWithoutJWT:
@@ -571,7 +693,7 @@ components:
           type: string
           description: "дата изменения пользователя"
           example: "2024-05-22T13:03:25Z"
-          nullable: false
+          nullable: true
 
     UserWithJWT:
       type: object
@@ -622,6 +744,12 @@ components:
               description: "идентификатор пользователя"
               example: "909c6a00-76f1-491f-9b07-982705c6d68b"
               nullable: false
+
+
+
+
+
+
 
 
 
