# server/auth-user-service-services/internal/repository/postgres/user.go
@@ -24,6 +24,7 @@ type IUser interface {
 	DeleteUserByID(ctx context.Context, id string) error
 	UpdateUserByID(ctx context.Context, userUpdate entity.UserUpdate) (entity.User, error)
 	GetUsers(ctx context.Context, filter entity.Filter) ([]entity.User, error)
+	UpdatePrivateUserByID(ctx context.Context, userUpdate entity.UserUpdatePrivate) (entity.User, error)
 }
 
 type User struct {
@@ -207,4 +208,60 @@ func (u *User) GetUsers(ctx context.Context, filter entity.Filter) ([]entity.Use
 
 	metrics.IncRequestTotalDB(metrics.GetUsersDb, metrics.OkStatus)
 	return users, nil
+}
+
+// UpdatePrivateUserByID - приватное редактирование пользователя
+func (u *User) UpdatePrivateUserByID(ctx context.Context, userUpdate entity.UserUpdatePrivate) (entity.User, error) {
+	defer metrics.ObserveRequestDurationPerMethodDB(metrics.Postgres, metrics.UpdatePrivateUserByIDDb)()
+
+	query, args := prepareQueryUpdatePrivate(userUpdate)
+	var user entity.User
+	err := u.client.QueryRow(ctx, query, args...).Scan(&user.ID, &user.Name, &user.Surname, &user.Email, &user.Password, &user.Role, &user.CreatedDate, &user.UpdatedDate)
+	if err != nil {
+		metrics.IncRequestTotalDB(metrics.UpdateUserByIDDb, metrics.FailStatus)
+		return entity.User{}, err
+	}
+
+	metrics.IncRequestTotalDB(metrics.UpdateUserByIDDb, metrics.OkStatus)
+	return user, nil
+}
+
+// prepareQueryUpdate - подготовка запроса для обновления пользователя
+func prepareQueryUpdatePrivate(user entity.UserUpdatePrivate) (string, []interface{}) {
+	setValues := make([]string, 0)
+	args := make([]interface{}, 0)
+	argId := 1
+	if user.Name != nil {
+		setValues = append(setValues, fmt.Sprintf("name=$%d", argId))
+		args = append(args, *user.Name)
+		argId++
+	}
+
+	if user.Surname != nil {
+		setValues = append(setValues, fmt.Sprintf("surname=$%d", argId))
+		args = append(args, *user.Surname)
+		argId++
+	}
+
+	if user.Email != nil {
+		setValues = append(setValues, fmt.Sprintf("email=$%d", argId))
+		args = append(args, *user.Email)
+		argId++
+	}
+
+	if user.Role != nil {
+		setValues = append(setValues, fmt.Sprintf("role=$%d", argId))
+		args = append(args, *user.Role)
+		argId++
+	}
+
+	setValues = append(setValues, fmt.Sprintf("updated_date=$%d", argId))
+	args = append(args, time.Now().UTC())
+	argId++
+
+	setQuery := strings.Join(setValues, ", ")
+	args = append(args, user.ID)
+
+	query := fmt.Sprintf("UPDATE %s SET %s WHERE id=$%v RETURNING id,name,surname,email,password,role,created_date,updated_date;", "users", setQuery, argId)
+	return query, args
 }
